@@ -6,7 +6,7 @@ readme_from 'lib/CGI/Header/PSGI.pm';
 repository 'https://github.com/anazawa/p5-CGI-Header-PSGI';
 
 requires 'Carp' => '1.10';
-requires 'CGI::Header' => '0.54';
+requires 'CGI::Header' => '0.55';
 requires 'parent';
 
 test_requires 'Test::More' => '0.98';
