@@ -1,5 +1,7 @@
 Revision history for Perl extension CGI::Header::PSGI.
 
+  - Requires CGI::Header 0.55 or higher
+
 0.54001  May 20th, 2013
 
   - Requires CGI::Header 0.54 or higher
